@@ -1,3 +1,6 @@
+2006-05-17  Alex Roitman  <shura@gramps-project.org>
+	* POTFILES.in: Add new file.
+
 2006-05-16  Alex Roitman  <shura@gramps-project.org>
 	* POTFILES.in: Add new files; remove old files.
 
